--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Importing Poppins font */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @layer base {
   /* Clash Display Font */
   @font-face {
@@ -111,9 +113,11 @@
     font-family: "Clash Display", sans-serif;
   }
 
-  body {
+  body,
+  * {
     /* background-image: url("./../src/img/grain.svg"); */
     font-family: "Archivo", sans-serif;
+    cursor: none;
   }
   body::before {
     content: "";
@@ -128,12 +132,33 @@
 }
 
 @layer utilities {
+  /* Custom Cursor */
+  .cursor {
+    position: fixed;
+    width: 30px;
+    height: 30px;
+    margin-left: -10px;
+    margin-top: -10px;
+    border-radius: 50%;
+    background: white;
+    mix-blend-mode: difference;
+    box-shadow: 0px 0px 10px theme("colors.primary");
+    transition: transform 0.3s ease;
+    transform-origin: center center;
+    pointer-events: none;
+    z-index: 1000;
+  }
+
   .title {
-    font-size: clamp(5rem, 26vh, 16vw);
+    font-size: clamp(4rem, 25vh, 16vw);
     line-height: 1;
   }
   .text-gradient {
-    background: -webkit-linear-gradient(45deg, #f97316, #a855f7);
+    background: -webkit-linear-gradient(
+      45deg,
+      theme("colors.primary"),
+      #a855f7
+    );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
@@ -250,7 +275,7 @@
     position: relative;
     width: 50px;
     height: 50px;
-    cursor: pointer;
+    /* cursor: pointer; */
     -webkit-tap-highlight-color: transparent;
   }
   .menu-icon .menu-icon__cheeckbox {
@@ -258,7 +283,7 @@
     width: 100%;
     height: 100%;
     position: relative;
-    cursor: pointer;
+    /* cursor: pointer; */
     z-index: 2;
     -webkit-touch-callout: none;
     position: absolute;
