--- a/styles/globals.css
+++ b/styles/globals.css
@@ -143,7 +143,8 @@
     background: white;
     mix-blend-mode: difference;
     box-shadow: 0px 0px 10px theme("colors.primary");
-    transition: transform 0.3s ease;
+    /* transition: all 0.1s ease-in; */
+    /* transition: transform 0.3s ease; */
     transform-origin: center center;
     pointer-events: none;
     z-index: 1000;
@@ -186,7 +187,7 @@
     content: attr(data-before-content);
     color: #fcf3ea;
     position: absolute;
-    top: 0;
+    bottom: 100%;
     left: 0;
     font-family: "Clash Display", sans-serif;
     font-weight: 600;
