--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,14 @@
 }
 
 @layer utilities {
+
+  .line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+  }
+
   /* heading before */
   .heading-before::before{
     content: '#';
@@ -39,7 +47,7 @@
   .heading-after::after{
     content: '';
     background-color: theme('colors.primary');
-    width: 100px;
+    width: 50px;
     height: 1px;
     position: absolute;
     left: calc(100% + 20px);
