--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --background: #ffffff;
-  --foreground: #171717;
+:root {
+  --background: #000814;
+  --foreground: #ededed;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
@@ -15,8 +15,8 @@
 } */
 
 body {
-  color: #ededed;
-  background: #0a0a0a;
+  color: var(--foreground);
+  background: var(--background);
   @apply font-sans;
 }
 
