--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,26 +3,21 @@
 @tailwind utilities;
 
 :root {
-  --background: #000814;
+  --background: #000000;
   --foreground: #ededed;
+  --primary: #CBFB45;
+  --secondary: #7C32F9;
 }
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
 
 body {
   color: var(--foreground);
   background: var(--background);
-  @apply font-sans;
+  @apply font-sans font-light;
 }
 
 @layer base {
   h1, h2, h3, h4, h5, h6 {
-    @apply font-condensed;
+    @apply font-space font-normal;
   }
 }
 
